# centroid

./: README.md  centroid.sublime-project  cities  icon.icns  notes  package.json  tsconfig.json  webpack.config.js
app/: index.css  index.html
native/: Cargo.toml  index.d.ts
native/src/: lib.rs
src/main/: main.ts
src/renderer/: gmaps.js  index.tsx
