[package]
name = "testnative"
version = "0.1.0"
authors = ["Eric Kidd <git@randomhacks.net>"]
license = "MIT"
build = "build.rs"

[lib]
name = "testnative"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.18"

[dependencies]
env_logger = "0.3.5"
log = "0.3.6"
neon = "0.1.18"
rand = "0.3.15"
rayon = "0.8.1"
